HW/Graphic/SCIG_CIF_0_1/SCIG_CIF_0_1/solution1/.autopilot/db/stream_convolution_slideWindow.pp.0.cpp.clang-tidy.loop-label.out.log
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:1447:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:1447:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:2421:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:2421:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:2435:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:2435:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:2449:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:2449:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:4078:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:4078:7: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9814:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=IFMPadDimSqrt core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9832:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=baseIterBound core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9833:2: warning: Added loop label VITIS_LOOP_153_1:   [xilinx-label-all-loops]
 for (unsigned int i = 0; i < baseIter*batch_size; i++) {
 ^~~
 VITIS_LOOP_153_1: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9833:2: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9838:9: error: Resource with core_name: RAM_S2P_LUTRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=inElem core=RAM_S2P_LUTRAM
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9841:6: warning: Added loop label VITIS_LOOP_161_2:   [xilinx-label-all-loops]
     for(unsigned int inp_ch=0; inp_ch<IFMCH_curr; inp_ch++){
     ^~~
     VITIS_LOOP_161_2: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9841:6: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9848:6: warning: Added loop label VITIS_LOOP_168_3:   [xilinx-label-all-loops]
     for(unsigned int inp_ch=0; inp_ch<IFMCH_curr; inp_ch++){
     ^~~
     VITIS_LOOP_168_3: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9848:6: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9855:5: warning: Added loop label VITIS_LOOP_175_4:   [xilinx-label-all-loops]
    for(unsigned int inp_ch=0; inp_ch<IFMCH_curr; inp_ch++){
    ^~~
    VITIS_LOOP_175_4: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9855:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9876:5: warning: Added loop label VITIS_LOOP_196_5:   [xilinx-label-all-loops]
    for(unsigned int inp_ch=0; inp_ch<IFMCH_curr; inp_ch++){
    ^~~
    VITIS_LOOP_196_5: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9876:5: note: FIX-IT applied suggested code changes
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9907:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_size_0 core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9908:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_size_1 core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9909:9: error: Resource with core_name: Mul_LUT pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=KER_bound core=Mul_LUT
        ^
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9910:2: warning: Added loop label VITIS_LOOP_241_6:   [xilinx-label-all-loops]
 for(unsigned int i = 0; i < KER_bound; i++){
 ^~~
 VITIS_LOOP_241_6: 
D:\Downloads\vivado2014.4\PYNQ_acc\HW\Graphic\SCIG_CIF_0_1\SCIG_CIF_0_1\solution1\.autopilot\db\stream_convolution_slideWindow.pp.0.cpp:9910:2: note: FIX-IT applied suggested code changes
